Disable weight decay for norm experiments

--- a/torchtitan/models/llama3/train_configs/dev_normy.toml
+++ b/torchtitan/models/llama3/train_configs/dev_normy.toml
@@ -43,6 +43,7 @@ final_out_exp = -1.0
 name = "Scion"
 lr = 3e-4
 eps = 1e-12
+weight_decay = 0
 is_light = true
 is_unconstrained = true
 backend_steps = 5
