--- a/torchtitan/models/llama3/train_configs/dev_normy.toml
+++ b/torchtitan/models/llama3/train_configs/dev_normy.toml
@@ -44,7 +44,7 @@ name = "Scion"
 lr = 3e-4
 eps = 1e-12
 weight_decay = 0
-is_light = true
+is_light = false
 is_unconstrained = true
 backend_steps = 5
 momentum = 0.1
