Fix scaling debug model configs
Now they use proper parametrization, given the correct config.

--- a/torchtitan/models/llama3/train_configs/dev_normy.toml
+++ b/torchtitan/models/llama3/train_configs/dev_normy.toml
@@ -27,15 +27,24 @@ wandb_name = "test-run"
 [model]
 name = "bit_byte_llama3"
 flavor = "debugmodel"
-norm_type = "rmsnorm" # layernorm / np_layernorm / rmsnorm / np_rmsnorm
-first_in_init_fn_type = "normal"
-first_in_exp = -0.5
-intermediate_init_fn_type = "normal"
-intermediate_init_std = 1.0
-intermediate_exp = -0.5
-init_gate_as_residual = False
-final_out_init_fn_type = "normal"
-final_out_exp = -1.0
+norm_type = "np_rmsnorm" # layernorm / np_layernorm / rmsnorm / np_rmsnorm
+first_in_init_fn_type = "scion_normal"
+first_in_init_std = 1
+first_in_exp = 0
+intermediate_init_fn_type = "orthogonal"
+intermediate_init_std = 1
+intermediate_exp = 0
+final_out_init_fn_type = "zeros"
+final_out_init_std = 1
+final_out_exp = 0
+depth_init = false
+init_gate_as_residual = false
+ffn_dim_multiplier = 1
+multiple_of = 256
+rope_theta = 500000
+qk_norm = true
+norm_eps = 1e-12
+
 # tokenizer_path = ???
 # converters = ???
 
