--- a/torchtitan/models/llama3/train_configs/dev_normy.toml
+++ b/torchtitan/models/llama3/train_configs/dev_normy.toml
@@ -31,7 +31,7 @@ norm_type = "np_rmsnorm" # layernorm / np_layernorm / rmsnorm / np_rmsnorm
 first_in_init_fn_type = "scion_normal"
 first_in_init_std = 1
 first_in_exp = 0
-intermediate_init_fn_type = "orthogonal"
+intermediate_init_fn_type = "scaled_orthogonal"
 intermediate_init_std = 1
 intermediate_exp = 0
 final_out_init_fn_type = "zeros"
