Adapt MoE debug config to Llama-3 and Scion

--- a/torchtitan/models/MoEllama/train_configs/debug_moe.toml
+++ b/torchtitan/models/MoEllama/train_configs/debug_moe.toml
@@ -2,8 +2,8 @@
 
 [job]
 dump_folder = "./outputs"
-description = "Llama 3 debug training"
-print_args = false
+description = "test"
+print_args = true
 use_for_integration_test = true
 
 [profiling]
@@ -15,42 +15,71 @@ save_memory_snapshot_folder = "memory_snapshot"
 
 [metrics]
 log_freq = 1
+log_norm_freq = 1
 disable_color_printing = false
 enable_tensorboard = false
 save_tb_folder = "tb"
-enable_wandb = false
+enable_wandb = true
+wandb_project = "test-project"
+wandb_group = "test-group"
+wandb_name = "test-run"
 
 [model]
-name = "MoEllama3"
+name = "MoEllama3" # "byte_MoEllama3"
 flavor = "debugmodel"
-norm_type = "rmsnorm"  # layernorm / np_layernorm / rmsnorm
-# test tokenizer.model, for debug purpose only
-tokenizer_path = "./tests/assets/test_tiktoken.model"
-# converters = "float8"
+# flavor = '1B-7B'
+norm_type = "np_rmsnorm" # layernorm / np_layernorm / rmsnorm / np_rmsnorm
+first_in_init_fn_type = "scion_normal_input"
+first_in_init_std = 1
+first_in_exp = 0
+intermediate_init_fn_type = "scaled_orthogonal"
+intermediate_init_std = 1
+intermediate_exp = 0
+final_out_init_fn_type = "scion_normal_output"
+final_out_init_std = 1
+final_out_exp = 0
+
+# tokenizer_path = ???
+# converters = ???
 
 [optimizer]
-name = "AdamW"
-lr = 8e-4
-eps = 1e-8
+name = "Scion"
+lr = 3e-4
+eps = 1e-12
+weight_decay = 0
+is_light = false
+is_unconstrained = true
+backend_steps = 5
+momentum = 0.1
+nesterov = false
+embed_lr = 3e-4
+unembed_lr = 3e-4
+embed_str_match = "tok_embeddings.weight"
+unembed_str_match = "output.weight"
+implementation = "fused" # for AdamW
 
 [lr_scheduler]
-warmup_steps = 2  # lr scheduler warm up, normally 20% of the train steps
-decay_ratio = 0.8  # lr scheduler decay ratio, 80% of the train steps
-decay_type = "linear"
+warmup_steps = 200  # lr scheduler warm up, normally 20% of the train steps
+decay_ratio = 0.25
+decay_type = "linear"  # linear / cosine / sqrt
 lr_min = 0.0
 
 [training]
-local_batch_size = 8
-seq_len = 2048
-max_norm = 1.0  # grad norm clipping
+seed = 1
+dataset_path = "./data"
 steps = 10
-dataset = "c4_test"  # supported datasets: c4_test (2K), c4 (177M)
+seq_len = 4096
+local_batch_size = 4
+global_batch_size = 4
+max_norm = -1  # grad norm clipping
 
 [parallelism]
 data_parallel_replicate_degree = 1
 data_parallel_shard_degree = -1
 fsdp_reshard_after_forward = "default" # default / never / always
 tensor_parallel_degree = 1
+mixed_precision_param = "bfloat16"
+mixed_precision_reduce = "float32"
 context_parallel_degree = 1
 pipeline_parallel_degree = 1
 enable_async_tensor_parallel = false
@@ -58,9 +87,10 @@ enable_async_tensor_parallel = false
 [checkpoint]
 enable_checkpoint = false
 folder = "checkpoint"
+interval_type = "steps"
 interval = 10
 model_weights_only = false
-export_dtype = "float32"
+export_dtype = "bfloat16"
 async_mode = "disabled"  # ["disabled", "async", "async_with_pinned_mem"]
 
 [compile]
@@ -68,7 +98,7 @@ enable = false
 components = ["model", "loss"]
 
 [activation_checkpoint]
-mode = 'selective'  # ['none', 'selective', 'full']
+mode = 'none'  # ['none', 'selective', 'full']
 selective_ac_option = '2'  # 'int' = ac every positive int layer or 'op', ac based on ops policy
 
 [float8]
