--- a/torchtitan/models/MoEllama/train_configs/debug_moe.toml
+++ b/torchtitan/models/MoEllama/train_configs/debug_moe.toml
@@ -32,13 +32,13 @@ norm_type = "np_rmsnorm" # layernorm / np_layernorm / rmsnorm / np_rmsnorm
 first_in_init_fn_type = "scion_normal_input"
 first_in_init_std = 1
 first_in_exp = 0
+router_init_fn_type = "scaled_orthogonal"
 intermediate_init_fn_type = "scaled_orthogonal"
 intermediate_init_std = 1
 intermediate_exp = 0
 final_out_init_fn_type = "scion_normal_output"
 final_out_init_std = 1
 final_out_exp = 0
-
 # tokenizer_path = ???
 # converters = ???
 
@@ -56,6 +56,7 @@ embed_lr = 3e-4
 unembed_lr = 3e-4
 embed_str_match = "tok_embeddings.weight"
 unembed_str_match = "output.weight"
+router_str_match = "\\.gate.expert_embeddings"
 implementation = "fused" # for AdamW
 
 [lr_scheduler]
