--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
 
     # Miscellaneous
     "tomli>=1.1.0",
+    "tomli-w>=1.1.0",
     "fsspec",
     "tyro",
     "tensorboard",
