--- a/torchtitan/models/llama3/hf_assests/config.json
+++ b/torchtitan/models/llama3/hf_assests/config.json
@@ -7,8 +7,8 @@
   },
   "attention_bias": false,
   "attention_dropout": 0.0,
-  "bos_token_id": 128000,
-  "eos_token_id": 128009,
+  "bos_token_id": null,
+  "eos_token_id": null,
   "head_dim": 128,
   "hidden_act": "silu",
   "hidden_size": 256,
